# emd-desafio-junior-data-scientist

./: .gitignore  README.md  analise_python.ipynb  analise_sql.sql  df.csv  pyproject.toml
src/: analise_python.ipynb  analise_sql.sql  df.csv
